<resources>
    <string name="app_name">SkyCast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favplaces">Fav Places :</string>
    <string name="removefavroite">Remove From Favoirte!</string>
    <string name="favvplaces">Favorite Places</string>
    <string name="settings">Settings</string>
    <string name="temp">Temperature Unit</string>
    <string name="celsisu">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="lang">Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="emable">Enable</string>
    <string name="disable">Disable</string>
    <string name="alert">Alerts</string>

    <string name="search_location">Search for a location</string>
    <string name="alert_title">Alert Title</string>
    <string name="hint_time_format">HH:mm</string>
    <string name="duration_seconds">Duration (seconds)</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>

    <string name="celsius">Celsius</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="place_name">Place Name</string>
    <string name="placeholder_dash">-</string>



</resources>